dist/1.0/bin/sample/retrieveUnpackaged/objects/Direction_Discount__c.object
<CustomObject>
    <description>Limitations in Discounts for Directions in relation to specified Tariff – store information how big discount can be given for Direction within specified Tariff</description>
    <fields>
        <fullName>Direction_ID__c</fullName>
        <description>Direction Record Id for which selected Tariff is available</description>
        <inlineHelpText>Direction Record Id for which selected Tariff is available</inlineHelpText>
        <label>Direction</label>
        <referenceTo>Direction__c</referenceTo>
        <relationshipName>DirectionDiscounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maximal_Discount__c</fullName>
        <description>Maximal value of Discount [%]</description>
        <inlineHelpText>Maximal value of Discount [%]</inlineHelpText>
        <label>Maximal Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Minimal_Price__c</fullName>
        <description>Minimal value that can be assigned in case of discount</description>
        <inlineHelpText>Minimal value that can be assigned in case of discount</inlineHelpText>
        <label>Minimal Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <description>Unique record identifier which can be used for data synchronization between different systems</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique record identifier which can be used for data synchronization between different systems</inlineHelpText>
        <label>Source Record Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Tariff_ID__c</fullName>
        <description>Tariff Record Id for selected Direction</description>
        <inlineHelpText>Tariff Record Id for selected Direction</inlineHelpText>
        <label>Tariff</label>
        <referenceTo>Tariff__c</referenceTo>
        <relationshipName>DirectionDiscounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Direction Discount</label>
    <nameField>
        <label>Direction Discount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Direction Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>